Fixed CSS issue where first share item badge was visible, regardless of passive status.

--- a/src/content_script.css
+++ b/src/content_script.css
@@ -105,21 +105,24 @@
 	display: block;
 }
 
-/* Only show first Share badge   */
-.fbc-badge-share-passive, .fbc-badge-share.fbc-badge-disabled, .fbc-badge-share:not(.fbc-badge-disabled):not(.fbc-badge-tooltip-active) ~ .fbc-badge-share:not(.fbc-badge-disabled):not(.fbc-badge-tooltip-active) {
-	display: none;
-	visibility: hidden;
-	opacity: 0;
-}
-
-.fbc-badge-share-passive:not(.fbc-badge-disabled), .fbc-badge-share:not(.fbc-badge-disabled), .fbc-badge-share.fbc-badge-tooltip-active:not(.fbc-badge-disabled) {
+.fbc-badge-share-passive:hover {
 	display: block;
 	visibility: visible;
 	opacity: 1;
 }
 
+/* Only show first Share badge   */
+.fbc-badge-share-passive, .fbc-badge-share-passive.fbc-badge-share:not(.fbc-badge-disabled), .fbc-badge-share.fbc-badge-disabled, .fbc-badge-share:not(.fbc-badge-disabled):not(.fbc-badge-tooltip-active) ~ .fbc-badge-share:not(.fbc-badge-disabled):not(.fbc-badge-tooltip-active) {
+	display: none;
+	visibility: hidden;
+	opacity: 0;
+}
 
-
+.fbc-badge-share:not(.fbc-badge-disabled), .fbc-badge-share.fbc-badge-tooltip-active:not(.fbc-badge-disabled) {
+	display: block;
+	visibility: visible;
+	opacity: 1;
+}
 
 .fbc-badge-prompt {
 	display: none;
